npm now, fixed overflow problems

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,4 +3,5 @@
   width: 100%;
   align-items: center;
   text-align: center;
+  overflow-x: hidden;
 }
